--- a/skiafy.html
+++ b/skiafy.html
@@ -18,17 +18,21 @@ limitations under the License. -->
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="theme-color" content="#ffffff">
   <link rel="icon" type="image/png" sizes="48x48" href="favicon-48x48.png">
   <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+  <link rel="shorcut icon" type="image/png" sizes="192x192" href="thumb.png">
+  <meta name="color-scheme" content="light dark">
   <meta itemprop="image" content="thumb.png">
-  <title>Skiafy your SVG</title>
+  <!-- PWA -->
+  <link rel="manifest" href="./manifest.json">
+  <title>Skiafier</title>
   <meta name="description" content="Skiafier - Converts .svg icons to .icon format.">
   <link rel="preload" href="fonts/roboto-v30-latin-regular.woff2" as="font" type="font/woff2" crossorigin>
   <link rel="stylesheet" type="text/css" href="css/main.css">
   <script src="js/skiafy.js"></script>
   <script src="js/main.js"></script>
+  <script src="register.js"></script>
   <script>
     function toggleDarkMode(useDark) {
         if (useDark) {
